# my_cuda_experiments

./: README.md
Julia_set_example/: Readme.md  julia_gpu.cu
cuda_cmake_separate_compilation/: CMakeLists.txt  README.md  main.cpp  myKernels.cu  myKernels.h
